--- a/src/components/main-content/main-content.css
+++ b/src/components/main-content/main-content.css
@@ -10,12 +10,11 @@
 
 .tab-content {
   display: flex;
-  /*width: 1010px;*/
   flex-direction: column;
   justify-content: center;
 }
 
-div#content-2 .content {
+div#content-2 .content .ant-alert {
   width: 938px;
 }
 
